Initial upload of UnemployCoin smart contract source code
- ERC20 token contract for unemployment support meme coin.
- Includes Ownable and Pausable features.
- Updated to include pause functionality and ownership controls.
- Prepared for deployment on Polygon/Matic network.

This version is not yet deployed. Future updates will be pushed here before redeployment.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-# Remix compiler artifacts
-**/artifacts/
-**/artifacts/**
-
-# Remix plugin state folders
-deps/
-states/
-
-# Debug info
-*.dbg.json
-*.tsbuildinfo
-
-# Optional
 .env
-.env.local
+*.secret
+node_modules/
+dist/
+artifacts/
+cache/
